Fixed Background & False Class

--- a/Styles/credits.css
+++ b/Styles/credits.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("Resources/ricksshakinarms.gif");
+  background-image: url("Resources/rickboi.jpeg");
   background-repeat: no-repeat;
 }
 #navbar {
